<resources>
    <string name="app_name">TheLibraryApp</string>
    <string name="lbl_search_play_books">Search Play Books</string>
    <string name="lbl_audiobooks">Audiobooks</string>
    <string name="lbl_ebooks">Ebooks</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_library">Library</string>
    <string name="lbl_download">Download</string>
    <string name="lbl_delete_from_your_library">Delete from your library</string>
    <string name="lbl_add_to_shelves">Add to shelves...</string>
    <string name="lbl_mark_as_read">Mark as read</string>
    <string name="lbl_hyphen">&#160;-&#160;</string>
    <string name="lbl_add_to_wishlist">Add to wishlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_your_books">Your Books</string>
    <string name="lbl_your_shelves">Your shelves</string>
    <string name="lbl_sort_by">Sort by:&#160;</string>
    <string name="title_sort_by">Sort by</string>
    <string name="lbl_recently_open">Recently opened</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_author">Author</string>
    <string name="title_view_as">View as</string>
    <string name="lbl_list">List</string>
    <string name="lbl_large_grid">Large grid</string>
    <string name="lbl_small_grid">Small grid</string>
    <string name="lbl_sample">&#160;- Sample</string>
    <string name="lbl_pages">&#160;pages</string>
    <string name="lbl_free_sample">Free sample</string>
    <string name="lbl_informatio_book_detail">Books that you buy on the Google Play website can be read in this app.</string>
    <string name="lbl_about_this_ebook">About this ebook</string>
    <string name="lbl_about_this_audiobook">About this audiobook</string>
    <string name="lbl_ratings_and_reviews">Ratings and reviews</string>
    <string name="number_five">5</string>
    <string name="number_four">4</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_one">1</string>
    <string name="lbl_published">Published</string>
    <string name="title_activity_create_shelf">CreateShelfActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lbl_create_shelf">Create shelf</string>
    <string name="lbl_shelf_name">Shelf name</string>
    <string name="lbl_about_this_book">About this book</string>
    <string name="lbl_rename_shelf">Rename shelf</string>
    <string name="lbl_delete_shelf">Delete Shelf</string>
    <string name="lbl_find_your_next_read">Let\'s find your next read</string>
    <string name="lbl_find_next_book_description">From romance to superheros to Thai suisine, we have tons of books for all your interests</string>
    <string name="lbl_shop_for_books">Shop for books</string>
    <string name="lbl_no_shelves">No shelves</string>
    <string name="lbl_no_shevles_description">Create shelves to match the way you think.</string>
    <string name="lbl_create_new">Create new</string>
</resources>