<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.SortByFragment"
    tools:ignore="RtlSymmetry">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/title_sort_by"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

        <View
            android:id="@+id/straightLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_straight_line"
            android:layout_below="@id/tvTitleSortBy"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:background="@color/straightLineColor" />

        <RadioGroup
            android:id="@+id/radioGroupSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/straightLine"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbRecentlyOpened"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_medium_2"
                android:text="@string/lbl_recently_open"
                android:textColor="@color/primaryTextColor" />

            <RadioButton
                android:id="@+id/rbTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_medium_2"
                android:text="@string/lbl_title"
                android:textColor="@color/primaryTextColor" />

            <RadioButton
                android:id="@+id/rbAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_medium_2"
                android:text="@string/lbl_author"
                android:textColor="@color/primaryTextColor" />


        </RadioGroup>
    </RelativeLayout>
</RelativeLayout>

